src/main/terraform/modules/eks/eks.tf
resource "aws_eks_cluster" "cluster" {
  name = "${var.project}-cluster"
  role_arn = aws_iam_role.cluster_role.arn

  vpc_config {
    subnet_ids = flatten([
      aws_subnet.public_subnet[*].id,
      aws_subnet.private_subnet[*].id,
    ])
    endpoint_private_access = true
    endpoint_public_access = true
    public_access_cidrs = ["0.0.0.0/0"]
  }

  depends_on = [
    aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy
  ]
}

resource "aws_iam_role" "cluster_role" {
  name = "${var.project}-Cluster-Role"

  assume_role_policy = <<POLICY
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Principal": {
        "Service": "eks.amazonaws.com"
      },
      "Action": "sts:AssumeRole"
    }
  ]
}
POLICY
}

resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role = aws_iam_role.cluster_role.name
}

resource "aws_security_group" "eks_cluster" {
  name = "${var.project}-cluster-sg"
  description = "Cluster communication with worker nodes."
  vpc_id = aws_vpc.vpc.id
}

resource "aws_security_group_rule" "cluster_inbound" {
  description = "Allow worker nodes to communicate with the cluster API Server"
  from_port = 443
  protocol = "tcp"
  security_group_id = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_nodes.id
  to_port = 443
  type = "ingress"
}

resource "aws_security_group_rule" "cluster_outbound" {
  description = "Allow cluster API Server to communicate with the worker nodes"
  from_port = 1024
  protocol = "tcp"
  security_group_id = aws_security_group.eks_cluster.id
  source_security_group_id = aws_security_group.eks_nodes.id
  to_port = 65535
  type = "egress"
}
